@@ -1,0 +1,20 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/time/time-1.1.2.4.ebuild,v 1.1 2009/04/19 09:19:37 kolmodin Exp $
+
+CABAL_FEATURES="lib profile haddock"
+inherit haskell-cabal
+
+DESCRIPTION="A time library"
+HOMEPAGE="http://semantic.org/TimeLib/"
+SRC_URI="http://hackage.haskell.org/packages/archive/${PN}/${PV}/${P}.tar.gz"
+
+LICENSE="BSD"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~x86-macos"
+IUSE=""
+
+DEPEND=">=dev-lang/ghc-6.6.1
+		>=dev-haskell/cabal-1.6"
+
+RDEPEND=">=dev-lang/ghc-6.6.1"
